Bug 1787546: Handle custom added "cause" property in structured clone of Error objects. r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D155835